--- a/src/App.css
+++ b/src/App.css
@@ -59,8 +59,11 @@
     --dark-gray-blue: hsl(224, 30%, 27%);
 }
 
-body {
+* {
     margin: 0;
+}
+
+body {
     font-family: 'Hanken Grotesk', sans-serif;
     display: grid;
 }
@@ -82,6 +85,8 @@ body {
     height: 120px;
     border-radius: 120px;
     margin: auto;
+    margin-top: 24px;
+    margin-bottom: 24px;
     display: grid;
 }
 
@@ -93,6 +98,7 @@ body {
 
 .score-section > h2 {
     color: var(--white);
+    margin-bottom: 16px;
 }
 
 .summary-section {
@@ -113,7 +119,9 @@ li {
     display: grid;
     grid-template-columns: 15% 55% 30%;
     align-items: center;
-    margin-bottom: 16px;
+    margin-top: 16px;
+    padding-top: 16px;
+    padding-bottom: 16px;
     border-radius: 8px;
 }
 
@@ -166,6 +174,28 @@ button {
     border-radius: 32px;
 }
 
+button:hover {
+    cursor: pointer;
+    background-image: linear-gradient(var(--light-slate-blue), var(--light-royal-blue));
+}
+
+.attribution {
+    font-size: 12px;
+    text-align: center;
+    color: var(--dark-gray-blue);
+}
+
+.attribution a {
+    text-decoration: none;
+    color: var(--dark-gray-blue);
+    font-weight: 800;
+}
+
+.attribution a:visited {
+    text-decoration: none;
+    color: var(--dark-gray-blue);
+}
+
 @media screen and (max-width: 375px) {
     .app {
         max-width: 375px;
@@ -173,9 +203,16 @@ button {
 
     .score-section {
         border-radius: 0px 0px 32px 32px;
+        padding-top: 40px;
+        padding-bottom: 40px;
     }
 
     .score-statement {
         max-width: 320px;
+    }
+
+    .summary-section {
+        margin-top: 32px;
+        margin-bottom: 32px;
     }
 }
